[package]
name = "rust-jwt-hs256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
